// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render as espected CTA 1`] = `
<div>
  <section
    class="ehg56va0 css-1ep92rf-Wrapper"
  >
    <img
      alt="mountains background"
      class="ehg56va1 css-yfs9x8-Background"
      src="./images/footer-image.png"
    />
    <div
      class="container css-sx5xsl-CTA"
    >
      <div
        class="css-upiiru"
      >
        <h4
          class="css-w5gd1b"
        >
          <span
            class="css-anwcxg-CTA"
          >
            An 
          </span>
          <span
            class="css-1ix4szz-CTA"
          >
            unforgettable 
          </span>
          <span
            class="css-1ohwco-CTA"
          >
            experience 
          </span>
          <br />
          <span
            class="css-17wq4xi-CTA"
          >
            Join 
          </span>
          <span
            class="css-193otl6-CTA"
          >
            the 
          </span>
          <span
            class="css-g6k9pm-CTA"
          >
            community. 
          </span>
        </h4>
      </div>
      <div
        class="css-df8eea-CTA"
      >
        <a
          class="css-5ywtia"
          href="/contact"
        >
          Contact Us
        </a>
        <p
          class="css-1amv1r1"
        >
          Do you have a question? 
          <br />
          <a
            href="tel:1(877)498-4344"
            style="text-decoration: none;"
          >
            +1 202 555 0164
          </a>
        </p>
      </div>
    </div>
  </section>
</div>
`;

exports[`render as espected Features 1`] = `
<div>
  <section
    class="css-vurnku"
  >
    <div
      class="container css-1nvme7y"
    >
      <div
        class="css-8npsg8"
      >
        <div
          class="css-37atqw-Icon e1exjhk90"
        >
          <svg
            class="css-vmdvmf"
            viewBox="0 0 13.229166 13.229166"
          >
            <title>
              Timer icon
            </title>
            <circle
              cx="6.6146"
              cy="7.2644"
              r="5.6226"
            />
            <circle
              cx="6.5581"
              cy="7.2362"
              r="4.0121"
            />
            <circle
              cx="6.5863"
              cy="7.2644"
              r=".59334"
            />
            <path
              d="m6.6146 11.197v-1.0454"
            />
            <path
              d="m4.4978 5.1194-0.73922-0.73922"
            />
            <path
              d="m9.4423 10.064-0.73922-0.73922"
            />
            <path
              d="m8.4771 5.2607 0.73922-0.73922"
            />
            <path
              d="m3.8434 9.9509 0.73922-0.73922"
            />
            <path
              d="m9.4824 7.2927h1.0454"
            />
            <path
              d="m2.6731 7.2644h1.0454"
            />
            <path
              d="m6.5581 6.5722v-2.1473"
            />
            <rect
              height="1.2997"
              rx="0"
              ry=".33905"
              width="1.8365"
              x="5.6257"
              y=".34213"
            />
          </svg>
        </div>
        <h4
          class="css-1yu3as5"
        >
          Time Icon
        </h4>
        <div
          class="css-1tiirty-Features"
        >
          Praesent accumsan consectetur eros. Pellentesque non.
        </div>
      </div>
      <div
        class="css-8npsg8"
      >
        <div
          class="css-37atqw-Icon e1exjhk90"
        >
          <svg
            class="css-vmdvmf"
            viewBox="0 0 13.229166 13.229166"
          >
            <title>
              Money icon
            </title>
            <g
              transform="translate(0 -283.77)"
            >
              <circle
                cx="6.6146"
                cy="290.39"
                r="6.1013"
              />
              <path
                d="m6.5969 294.48v-1.1437"
              />
              <path
                d="m8.0138 287.62-1.8095 0.0341s-1.3656-0.0342-1.4168 1.3827c0.068282 1.7241 1.7753 1.3656 1.7753 1.3656s1.9431-0.0507 1.8777 1.3827c-0.058308 1.2794-1.0413 1.4169-1.8607 1.4169h-1.451"
              />
              <path
                d="m6.5969 287.44v-1.1437"
              />
            </g>
          </svg>
        </div>
        <h4
          class="css-1yu3as5"
        >
          Money Icon
        </h4>
        <div
          class="css-1uujl1a-Features"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </div>
      </div>
      <div
        class="css-8npsg8"
      >
        <div
          class="css-37atqw-Icon e1exjhk90"
        >
          <svg
            class="css-vmdvmf"
            viewBox="0 0 13.229166 13.229166"
          >
            <title>
              Credit card icon
            </title>
            <rect
              height="7.2906"
              rx=".89769"
              ry=".87407"
              width="11.259"
              x=".98491"
              y="2.9693"
            />
            <path
              d="m0.98038 4.4412h11.268"
            />
            <path
              d="m0.98038 5.835h11.268"
            />
            <path
              d="m2.386 7.843h2.9766"
            />
            <path
              d="m2.386 8.8352h2.9766"
            />
            <rect
              height="1.4324"
              rx=".40672"
              ry=".40672"
              width="1.4324"
              x="9.3356"
              y="7.3513"
            />
            <path
              d="m0.68508 11.032 12.213-8.7879"
            />
          </svg>
        </div>
        <h4
          class="css-1yu3as5"
        >
          Credit Card Icon
        </h4>
        <div
          class="css-1qj35ak-Features"
        >
          Pellentesque nec cursus metus. Nunc quis urna sapien
        </div>
      </div>
      <div
        class="css-8npsg8"
      >
        <div
          class="css-37atqw-Icon e1exjhk90"
        >
          <svg
            class="css-vmdvmf"
            viewBox="0 0 13.229166 13.229166"
          >
            <title>
              Paperwork icon
            </title>
            <path
              d="m3.0474 12.591v-10.772h5.5043l2.8703 2.8703v7.9257z"
            />
            <path
              d="m2.8348 11.552h-0.8032v-10.796h8.3863v2.9293"
            />
            <path
              d="m8.5753 1.7954v2.8112h2.764"
            />
            <path
              d="m4.3703 10.725h5.1027"
            />
            <path
              d="m4.3703 7.4414h5.1027"
            />
            <path
              d="m4.3703 5.7996h5.1027"
            />
            <path
              d="m4.3703 4.1577h3.0213"
            />
            <path
              d="m4.3703 9.0832h5.1027"
            />
          </svg>
        </div>
        <h4
          class="css-1yu3as5"
        >
          Document Icon
        </h4>
        <div
          class="css-1ehr10y-Features"
        >
          Morbi vestibulum aliquam blandit. Donec faucibus tellus quis erat.
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`render as espected Header 1`] = `
<div>
  <header
    class="css-1ivoic6-Wrapper e17ta0rq0"
  >
    <picture
      class="css-1o9hww4-Background-Header e17ta0rq1"
    >
      <source
        media="(min-width: 800px)"
        srcset="./images/bg-3-1500.png"
      />
      <source
        media="(max-width: 800px)"
        srcset="./images/bg-3-800.png"
      />
      <img
        alt="money background"
        class="css-9taffg"
        src="./images/bg-3-1500.png"
      />
    </picture>
    <div
      class="css-ucakx3-Header"
    >
      <div
        class="css-10gcz7t"
      >
        Everything you need in one place
      </div>
      <h1
        class="css-zmrqg7"
      >
        Next-generation 
         
        <div
          class="css-86bk71-Wrapper efl8sf10"
        >
          <span
            class="css-iifya3-FancyText"
          >
            Landing
          </span>
          <div
            class="css-x0wys2-Animated-FancyText efl8sf11"
          >
            Landing
          </div>
          <div
            class="css-x0wys2-Animated-FancyText efl8sf11"
          >
            Blog
          </div>
        </div>
      </h1>
      <form
        class="css-8i4y4z-Form e17ta0rq2"
      >
        <input
          class="css-1lotepu-StyledInput e1rkkvyd0"
          inputmode="numeric"
          name="amount"
          placeholder="Requested Amount"
          value=""
        />
        <button
          class="css-8ctaua"
        >
          Apply
          <span
            class="hide-md css-6g5xt6"
          >
            <svg
              class="css-6832e"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M85 277.375h259.704L225.002 397.077 256 427l171-171L256 85l-29.922 29.924 118.626 119.701H85v42.75z"
              />
            </svg>
          </span>
        </button>
      </form>
    </div>
  </header>
</div>
`;

exports[`render as espected IconCard 1`] = `
<div>
  <svg
    class="css-vurnku"
  >
    <title>
      Credit card icon
    </title>
    <rect
      height="7.2906"
      rx=".89769"
      ry=".87407"
      width="11.259"
      x=".98491"
      y="2.9693"
    />
    <path
      d="m0.98038 4.4412h11.268"
    />
    <path
      d="m0.98038 5.835h11.268"
    />
    <path
      d="m2.386 7.843h2.9766"
    />
    <path
      d="m2.386 8.8352h2.9766"
    />
    <rect
      height="1.4324"
      rx=".40672"
      ry=".40672"
      width="1.4324"
      x="9.3356"
      y="7.3513"
    />
    <path
      d="m0.68508 11.032 12.213-8.7879"
    />
  </svg>
</div>
`;

exports[`render as espected IconMoney 1`] = `
<div>
  <svg
    class="css-vurnku"
  >
    <title>
      Money icon
    </title>
    <g
      transform="translate(0 -283.77)"
    >
      <circle
        cx="6.6146"
        cy="290.39"
        r="6.1013"
      />
      <path
        d="m6.5969 294.48v-1.1437"
      />
      <path
        d="m8.0138 287.62-1.8095 0.0341s-1.3656-0.0342-1.4168 1.3827c0.068282 1.7241 1.7753 1.3656 1.7753 1.3656s1.9431-0.0507 1.8777 1.3827c-0.058308 1.2794-1.0413 1.4169-1.8607 1.4169h-1.451"
      />
      <path
        d="m6.5969 287.44v-1.1437"
      />
    </g>
  </svg>
</div>
`;

exports[`render as espected IconPaper 1`] = `
<div>
  <svg
    class="css-vurnku"
  >
    <title>
      Paperwork icon
    </title>
    <path
      d="m3.0474 12.591v-10.772h5.5043l2.8703 2.8703v7.9257z"
    />
    <path
      d="m2.8348 11.552h-0.8032v-10.796h8.3863v2.9293"
    />
    <path
      d="m8.5753 1.7954v2.8112h2.764"
    />
    <path
      d="m4.3703 10.725h5.1027"
    />
    <path
      d="m4.3703 7.4414h5.1027"
    />
    <path
      d="m4.3703 5.7996h5.1027"
    />
    <path
      d="m4.3703 4.1577h3.0213"
    />
    <path
      d="m4.3703 9.0832h5.1027"
    />
  </svg>
</div>
`;

exports[`render as espected IconTimer 1`] = `
<div>
  <svg
    class="css-vurnku"
  >
    <title>
      Timer icon
    </title>
    <circle
      cx="6.6146"
      cy="7.2644"
      r="5.6226"
    />
    <circle
      cx="6.5581"
      cy="7.2362"
      r="4.0121"
    />
    <circle
      cx="6.5863"
      cy="7.2644"
      r=".59334"
    />
    <path
      d="m6.6146 11.197v-1.0454"
    />
    <path
      d="m4.4978 5.1194-0.73922-0.73922"
    />
    <path
      d="m9.4423 10.064-0.73922-0.73922"
    />
    <path
      d="m8.4771 5.2607 0.73922-0.73922"
    />
    <path
      d="m3.8434 9.9509 0.73922-0.73922"
    />
    <path
      d="m9.4824 7.2927h1.0454"
    />
    <path
      d="m2.6731 7.2644h1.0454"
    />
    <path
      d="m6.5581 6.5722v-2.1473"
    />
    <rect
      height="1.2997"
      rx="0"
      ry=".33905"
      width="1.8365"
      x="5.6257"
      y=".34213"
    />
  </svg>
</div>
`;

exports[`render as espected Steps 1`] = `
<div>
  <section
    class="css-1fmlf4e"
  >
    <div
      class="container css-n3b2sn"
    >
      <div
        class="css-1qm1of7"
      >
        <div
          class="css-w9kesc-Steps"
        >
          <h1
            class="css-1gunff1"
          >
            Morbi suscipit varius enim, ac
             
            <span
              class="css-1i78tal"
            >
              aliquet erat.
            </span>
          </h1>
          <p
            class="css-1pln5o7"
          >
            Nullam eu vulputate lorem. Quisque volutpat lacus sapien, placerat ullamcorper quam pretium quis. Fusce suscipit bibendum sollicitudin. Etiam interdum ligula lorem, sed euismod ex interdum eget.
          </p>
        </div>
      </div>
      <div
        class="css-kg0zaz"
      >
        <div
          class="css-1ljoom7-VideoThumb-Steps e11hsem30"
        >
          <div
            style="width: 640px; height: 360px;"
          >
            <video
              controls=""
              preload="auto"
              src="./videos/video.mp4"
              style="width: 100%; height: 100%;"
            />
          </div>
          <button
            class="e11hsem31 css-hgfq9k-PlayButton"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`render as espected Testimonials 1`] = `
<div>
  <section
    class="css-1fmlf4e"
  >
    <div
      class="css-sd868u-Testimonials"
    >
      <h4
        class="css-12jo13f"
      >
        Donec dignissim 
         
        <span
          class="css-1i78tal"
        >
          rutrum diam
        </span>
      </h4>
      <p
        class="css-65hcn1"
      >
        Vivamus faucibus neque at velit lobortis dapibus. Proin sit amet libero quis dolor maximus varius. Proin blandit convallis mi,.
      </p>
    </div>
    <div
      class="css-13tbvei"
    >
      <div
        class="css-emtes6-Testimonials"
      >
        <div
          class="css-tq5hxx-Wrapper e1wyqj5v0"
        >
          <img
            alt="Kashif Wheatley"
            class="e11si4jp0 css-1ulugdh-Thumbnail"
            src="./images/josephine.jpg"
          />
          <div
            class="css-l4xhlt"
          >
            <h6
              class="css-1i0bpec"
            >
              Kashif Wheatley
            </h6>
            <span
              class="css-7a615i"
            >
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </span>
          </div>
          <p
            class="css-1wtrivt"
          >
            <em>
              “
              Fusce justo lorem, finibus ut suscipit in, consectetur in diam. Vestibulum ante ipsum primis in faucibus orci.
              ”
            </em>
          </p>
        </div>
      </div>
      <div
        class="css-451exu-Testimonials"
      >
        <div
          class="css-tq5hxx-Wrapper e1wyqj5v0"
        >
          <img
            alt="Aariz Montoya"
            class="e11si4jp0 css-1ulugdh-Thumbnail"
            src="./images/anas.jpg"
          />
          <div
            class="css-l4xhlt"
          >
            <h6
              class="css-1i0bpec"
            >
              Aariz Montoya
            </h6>
            <span
              class="css-7a615i"
            >
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </span>
          </div>
          <p
            class="css-1wtrivt"
          >
            <em>
              “
              Morbi at laoreet leo. Ut in pulvinar ex, vitae tempor nibh. Donec ullamcorper libero non lacus porttitor ultrices.
              ”
            </em>
          </p>
        </div>
      </div>
      <div
        class="css-14p65gb-Testimonials"
      >
        <div
          class="css-tq5hxx-Wrapper e1wyqj5v0"
        >
          <img
            alt="Rueben Childs"
            class="e11si4jp0 css-1ulugdh-Thumbnail"
            src="./images/allina.jpg"
          />
          <div
            class="css-l4xhlt"
          >
            <h6
              class="css-1i0bpec"
            >
              Rueben Childs
            </h6>
            <span
              class="css-7a615i"
            >
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </span>
          </div>
          <p
            class="css-1wtrivt"
          >
            <em>
              “
              Nulla convallis fringilla placerat. Duis imperdiet efficitur efficitur. Duis vel dolor lacus.
              ”
            </em>
          </p>
        </div>
      </div>
      <div
        class="css-1126efc-Testimonials"
      >
        <div
          class="css-tq5hxx-Wrapper e1wyqj5v0"
        >
          <img
            alt="Lukasz Knapp"
            class="e11si4jp0 css-1ulugdh-Thumbnail"
            src="./images/albert.jpg"
          />
          <div
            class="css-l4xhlt"
          >
            <h6
              class="css-1i0bpec"
            >
              Lukasz Knapp
            </h6>
            <span
              class="css-7a615i"
            >
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
              <svg
                class="css-8x4km5"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </span>
          </div>
          <p
            class="css-1wtrivt"
          >
            <em>
              “
              Proin blandit convallis mi, sit amet efficitur nisl sagittis id. Proin maximus sed nisl vitae consequat.
              ”
            </em>
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
